AMBARI-313 (clemlab): Complete Java17/Python3 test stabilization across server and metrics